srcs/tester/base/vector/clear/log.txt
./base/vector/clear/patched.cpp:7:3: error: use of undeclared identifier 'ft'
  ft::vector<int> myvector;
  ^
./base/vector/clear/patched.cpp:8:3: error: use of undeclared identifier 'myvector'
  myvector.push_back (100);
  ^
./base/vector/clear/patched.cpp:9:3: error: use of undeclared identifier 'myvector'
  myvector.push_back (200);
  ^
./base/vector/clear/patched.cpp:10:3: error: use of undeclared identifier 'myvector'
  myvector.push_back (300);
  ^
./base/vector/clear/patched.cpp:13:24: error: use of undeclared identifier 'myvector'
  for (unsigned i=0; i<myvector.size(); i++)
                       ^
./base/vector/clear/patched.cpp:14:25: error: use of undeclared identifier 'myvector'
    std::cout << ' ' << myvector[i];
                        ^
./base/vector/clear/patched.cpp:17:3: error: use of undeclared identifier 'myvector'
  myvector.clear();
  ^
./base/vector/clear/patched.cpp:18:3: error: use of undeclared identifier 'myvector'
  myvector.push_back (1101);
  ^
./base/vector/clear/patched.cpp:19:3: error: use of undeclared identifier 'myvector'
  myvector.push_back (2202);
  ^
./base/vector/clear/patched.cpp:22:24: error: use of undeclared identifier 'myvector'
  for (unsigned i=0; i<myvector.size(); i++)
                       ^
./base/vector/clear/patched.cpp:23:25: error: use of undeclared identifier 'myvector'
    std::cout << ' ' << myvector[i];
                        ^
11 errors generated.
